Data is stored in persistance DB (#14)